# rustcar

./: Cargo.toml
configs/: 3car.toml  5car.toml
src/: cars.rs  lib.rs  main.rs  policy.rs  solver.rs
